[tool.poetry]
name = "delogger"
version = "0.2.4"
description = "delogger is a convenient logging package"
authors = ["deresmos <deresmos@gmail.com>"]
repository = "https://github.com/deresmos/delogger"
readme = "README.md"
keywords = ["logging", "Logger"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
colorlog = "^4.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-sugar = "^0.9.4"
black = "^20.8b1"
flake8 = "^3.8.4"
line_profiler = "^3.0.2"
memory_profiler = "^0.57.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
