[tool.poetry]
name = "delogger"
version = "0.3.0"
description = "delogger is a convenient logging package"
authors = ["deresmos <deresmos@gmail.com>"]
repository = "https://github.com/deresmos/delogger"
readme = "README.md"
keywords = ["logging", "Logger"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
colorlog = "^4.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-sugar = "^0.9.4"
black = "20.8b1"
flake8 = "^3.8.4"
memory_profiler = "^0.57.0"
isort = "5.6.3"
pytest-cov = "^2.10.1"
pytest-freezegun = "^0.4.2"
line-profiler = "^3.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
force_single_line = true
force_sort_within_sections = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract",
    "pass",
]
